# leela-interp

./: .gitignore  README.md  pyproject.toml
notebooks/: act_patching.ipynb  demo.ipynb  figure_1.ipynb  other_figures.ipynb  puzzle_example.ipynb  website.ipynb
scripts/: make_corruptions.py  make_puzzles.py  piece_movement_heads.py  probing.py  run_global_patching.py  run_single_head.py
src/leela_interp/: __init__.py
src/leela_interp/core/: forward_pass_implementation.py  iceberg_board.py  lc0.py  leela_board.py  nnsight.py  utils.py
src/leela_interp/tools/: activations.py  attention.py  figure_helpers.py  patching.py  piece_movement_heads.py  play.py  probing.py
